# ProyectoVision

./: .gitignore  CMakeLists.txt
src/: Procesar.cpp  Procesar.h  mainwindow.cpp  mainwindow.h  mainwindow.ui
